WIP onglet projet

--- a/langs/fr_FR/scrumproject.lang
+++ b/langs/fr_FR/scrumproject.lang
@@ -198,3 +198,5 @@ ScrumSprintTime = Temps consommé
 
 WillRedirectYouToTaskPageForAction = En cliquant ici vous serez redirigé vers la page effectuant l'action
 TimeConsumedAdded = Temps consommé ajouté
+
+ScrumProjectTasksPlanning = Planning Scrum
