Add kanban object

--- a/langs/fr_FR/scrumproject.lang
+++ b/langs/fr_FR/scrumproject.lang
@@ -30,6 +30,9 @@ ScrumProjectSetup = Configuration du module Projet Scrum
 Settings = Réglages
 ScrumProjectSetupPage = Page de configuration du module Projet Scrum
 ScrumSprintExtraFields = Attributs supplémentaires sprints
+ScrumKanbanExtraFields = Attributs supplémentaires Kanban
+ScrumUserStoryExtraFields = Attributs supplémentaires User story
+ScrumUserStorySprintExtraFields = Attributs supplémentaires User story plannifiés
 ScrumCardExtraFields = Attributs supplémentaires cartes
 NumberingModules = Modèles de numérotation pour %s
 ScrumCardStage = Projet Scrum - Étapes des cartes
