--- a/langs/fr_FR/scrumproject.lang
+++ b/langs/fr_FR/scrumproject.lang
@@ -236,3 +236,5 @@ TypeContact_scrumproject_scrumtask_internal_PO = Product Owner
 TypeContact_scrumproject_scrumtask_internal_DEV = Développeur
 
 ScrumUserRoleForTask = Rôle par défaut
+
+SCRUMPROJECT_DEFAULT_KANBAN_CONTACT_CODE = Contact par défaut utilisé pour l'affectation à une carte du kanban
