FIX update class card list and langs

--- a/langs/fr_FR/scrumproject.lang
+++ b/langs/fr_FR/scrumproject.lang
@@ -142,7 +142,7 @@ StatusScrumUserStorySprintDraft = Brouillon
 StatusScrumUserStorySprintReady = Prête
 StatusScrumUserStorySprintDone = Terminée
 BusinessValue = Business value
-QtyConsumed = Qty consommée
+QtyConsumed = Qté consommée
 
 ScrumUserStorySprints = user story planifiée
 ListOfScrumUserStorys = Liste des user stories
