--- a/langs/fr_FR/scrumproject.lang
+++ b/langs/fr_FR/scrumproject.lang
@@ -239,3 +239,8 @@ TypeContact_scrumproject_scrumtask_internal_PO = Product Owner
 TypeContact_scrumproject_scrumtask_internal_DEV = Développeur
 
 ScrumUserRoleForTask = Rôle par défaut
+usePlanWizard = Utiliser l'assistant de plannification
+QtyToPlan = Qté à planifier
+QtySprintCanPlan =  Qté planifiable au sprint
+AddPlanToUserStory = Ajouter une plannification
+StoryPoints = Quantité
