wip new plan screen

--- a/langs/fr_FR/scrumproject.lang
+++ b/langs/fr_FR/scrumproject.lang
@@ -241,9 +241,11 @@ TypeContact_scrumproject_scrumtask_internal_DEV = Développeur
 ScrumUserRoleForTask = Rôle par défaut
 usePlanWizard = Utiliser l'assistant de plannification
 QtyToPlan = Qté à planifier
+QtyPlanned = Planifié
 QtySprintCanPlan =  Qté planifiable au sprint
+XQtySprintCanPlan =  <strong>%s</strong> planifiable(s) au sprint
 AddPlanToUserStory = Ajouter une plannification
-StoryPoints = Quantité
+StoryPoints = Story points (quantité)
 UserStoryAlreadyPlannedForThisSprint = Cette user story est déja plannifiée pour ce sprint
 DeletePlanToUserStory = Supprimer cette plannification
 DeletePlanToUserStoryDisabled = Suppression non permise
