--- a/langs/fr_FR/scrumproject.lang
+++ b/langs/fr_FR/scrumproject.lang
@@ -244,7 +244,7 @@ QtyToPlan = Qté à planifier
 QtyPlanned = Planifié
 QtySprintCanPlan =  Qté planifiable au sprint
 XQtySprintCanPlan =  <strong>%s</strong> planifiable(s) au sprint
-AddPlanToUserStory = Ajouter une plannification
+AddPlanToUserStory = Ajouter une planification
 StoryPoints = Story points (quantité)
 UserStoryAlreadyPlannedForThisSprint = Cette user story est déja plannifiée pour ce sprint
 DeletePlanToUserStory = Supprimer cette plannification
