New create kanban sprint card & copy structure

--- a/langs/fr_FR/scrumproject.lang
+++ b/langs/fr_FR/scrumproject.lang
@@ -50,6 +50,10 @@ NewScrumUserStory = Nouvelle User story
 ScrumUserStorySprint = User story plannifiés
 NewScrumUserStorySprint = Nouvelle plannification
 NewScrumKanban = Nouveau Kanban
+CreateNewScrumKanban = Créer nouveau Kanban
+SelectKanbanClone = Copier la structure du Kanban :
+ConfirmCreateAsk=Voulez-vous vraiment créer un kanban pour <b> %s </b> ?
+DisplayScrumKanban = Afficher Kanban
 
 LeftMenuDeveloperAvailability = Dispo RH
 
