--- a/langs/fr_FR/scrumproject.lang
+++ b/langs/fr_FR/scrumproject.lang
@@ -105,10 +105,11 @@ ScrumKanbanNotDefine = Aucun Kanban pour le Sprint "%s"
 ScrumMassSprint = Sprints création en masse
 ScrumMassSprintCreated = Nombre de sprints créés : %s
 ScrumMassSprintCreateError = Impossible de créer un sprint
-ScrumMassSprintNumber = Numéro de sprint :
-ScrumMassSprintStartSprintWeek = Jours début de sprint :
-ScrumMassSprintEnSprintWeek = Jours fin de sprint :
-ScrumMassSprintDuration = Durée sprint en semaine :
+ScrumMassSprintNumber = Numéro de sprint
+ScrumMassSprintStartSprintWeek = Jours début de sprint
+ScrumMassSprintEnSprintWeek = Jours fin de sprint
+ScrumMassSprintDuration = Durée sprint en semaine
+ScrumMassSprintDurationHelp = "Durée sprint en semaine" défini le nombre de semaine d'un sprint. Par exemple, si un sprint est composé de deux semaines il faudra remplir ce champ avec une valeur de "2".
 ScrumMassSprintParameters = Paramètres création de sprint en masse
 ScrumMassSprintParametersHelp = Aide
 ScrumMassSprintParametersHelpText = Permet de générer des sprints en sélectionnant les équipes souhaitées "Equipe Scrum", dans une période comprise entre "Date début" et "Date fin". <br><br> Le "Numéro de sprint" fera parti du nom du sprint qui sera afficher sous la forme suivante "Sprint 1 NomEquipe". Il sera incrémenté automatiquement. <br><br> "Jours de début de sprint" et "Jours de fin de sprint" détermine les jours de la semaine du sprint et permettra de créer les sprints en suviant cette contrainte. Par exemple, si un sprint commence le lundi et fini un vendredi, le sprint suivant sera créé à la date du prochain lundi. <br><br> "Durée sprint en semaine" défini le nombre de semaine d'un sprint. Par exemple, si un sprint est composé de deux semaines il faudra remplir ce champ avec une valeur de "2".
