Fix drop card status

--- a/langs/fr_FR/scrumproject.lang
+++ b/langs/fr_FR/scrumproject.lang
@@ -148,7 +148,7 @@ ScrumCards = cartes scrum
 ScrumCardTab = Cartes
 NewScrumCard = Nouvelle carte
 StatusScrumCardDraft = Brouillon
-StatusScrumCardReady = Prête
+StatusScrumCardReady = A faire
 StatusScrumCardDone = Terminée
 GoToScrumCards = Voir les cartes
 
