New add dispo dev on sprint create

--- a/langs/fr_FR/scrumproject.lang
+++ b/langs/fr_FR/scrumproject.lang
@@ -93,10 +93,15 @@ SetBackToPending = Retour à en cours
 SetBackToValid = Retour à validé
 ScrumSprintUserAdded = %s utilisateurs associés au sprint
 ScrumSprintUserAddedError = Erreur lors de l'association des utilisateurs au sprint
+ScrumSprintUserAddedNobody = Aucun utilisateur associé à l'équipe
+ScrumSprintUserCreateError = Erreur lors de la création  des disponibilités
+ScrumSprintUserNoDevAssociate = Aucun développeur associé à l'équipe
+ScrumSprintUserSqlError = Erreur lors de la requête SQL
 ScrumSprintVelocityCalculated = Vélocité calculée du sprint : %s
 ScrumSprintVelocityCalculatedError = Erreur lors du calcul de la vélocité du sprint : %s
 ScrumSprintQuantitiesCalculatedError = Erreur lors du calcul des quantités du sprint : %s
-ScrumProjectUserVelocity = Vélocité par sprint scrum
+ScrumProjectUserVelocity = Disponibilité par sprint scrum
+ScrumProjectUserRate = Ratio de vélocité
 ScrumProjectUserRole = Rôle scrum
 ScrumProjectUserRolePO = Product Owner
 ScrumProjectUserRoleDEV = Developer
